switched to java 1.6

--- a/cee-news-webreader/src/main/webapp/NewsReader.html
+++ b/cee-news-webreader/src/main/webapp/NewsReader.html
@@ -5,7 +5,7 @@
 
 <link type="text/css" rel="stylesheet" href="NewsReader.css">
 <title>News Reader</title>
-<script language="javascript" src="NewsReader/NewsReader.nocache.js"></script>
+<script src="NewsReader/NewsReader.nocache.js"></script>
 </head>
 <body>
 
