NEW - # 118: Create static HTML UI prototype https://www.andreasbehnke.com/mantis/view.php?id=118

--- a/cee-news-html-prototype/startView.html
+++ b/cee-news-html-prototype/startView.html
@@ -3,10 +3,60 @@
 	<head>
 		<link type="text/css" rel="stylesheet" href="css/main.css">
 	</head>
-	<body class="debug">
-		<div class="head panel">head</div>
-		<div class="right panel">right</div>
-		<div class="left panel">left</div>
-		<div class="bottom panel">bottom</div>
+	<body class="">
+		<div class="head panel">
+			<input type="text" class="search" />
+			<input type="button" value="Search" />
+		</div>
+		<div class="right panel vertical-scroll">
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column3_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			
+		</div>
+		<div class="left panel vertical-scroll">
+			<div class="column1_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column1_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column1_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column1_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column1_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column1_row3 panel teaser clickable">column2_of_3</div>
+			<div class="column1_row3 panel teaser clickable">column2_of_3</div>
+			<div class="column1_row3 panel teaser clickable">column2_of_3</div>
+			<div class="column1_row3 panel teaser clickable">column2_of_3</div>
+			<div class="column2_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column2_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column2_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column2_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column2_row3 panel teaser clickable"><h1>Dieses ist ein sehr spannender Artikel</h1> <a href="startView.html">open source</a><p>This are the first sentences of the article...</p></div>
+			<div class="column2_row3 panel teaser clickable">column2_of_3</div>
+			<div class="column2_row3 panel teaser clickable">column2_of_3</div>
+			<div class="column2_row3 panel teaser clickable">column2_of_3</div>
+			<div class="column2_row3 panel teaser clickable">column2_of_3</div>
+			<div class="column2_row3 panel teaser clickable">column2_of_3</div>
+			<div class="column2_row3 panel teaser clickable">column2_of_3</div>
+			<div class="column2_row3 panel teaser clickable">column2_of_3</div>
+		</div>
+		<div class="bottom panel">
+			<input type="button" value="Add Site" />
+			<select>
+				<option>Select Working Set</option>
+			</select>
+			<input type="button" value="Edit" />
+		</div>
+		
+		
 	</body>
 </html>
