--- a/cee-news-html-prototype/src/main/resources/singlePage.html
+++ b/cee-news-html-prototype/src/main/resources/singlePage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="css/main.css">
+		<link type="text/css" rel="stylesheet" href="css/mainSinglePage.css">
 	</head>
 	<body class="">
 		<div class="head panel">
