RESOLVED - # 97: CSS styled design of UI, provide screen and implement styles https://www.andreasbehnke.com/mantis/view.php?id=97 ASSIGNED - # 133: Provide fulltext search within working set https://www.andreasbehnke.com/mantis/view.php?id=133

--- a/cee-news-html-prototype/src/main/resources/twopage/reading.html
+++ b/cee-news-html-prototype/src/main/resources/twopage/reading.html
@@ -4,36 +4,37 @@
 		<link type="text/css" rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
-		<div class="readingContainer">
+		<div class="reading container">
 			<div class="top gradient pager">
-				<div class="link icon30 navLeft">Start Page</div>
-				<div class="articleSelection">
+				<div class="link icon30 nav-left">Start Page</div>
+				<div class="article-selection">
 					<select title="Select Article">
 						<option>Article Headline 1 Abcd efg hijkl mno</option>
 						<option>Article Headline 2 Abcd efg hijkl mno</option>
 						<option>Article Headline 3 Abcd efg hijkl mno</option>
 					</select>
 				</div>
-				<button class="icon icon24 navLeft" title="Previous Article"></button>
-				<button class="icon icon24 navRight" title="Next Article"></button>
+				<button class="icon icon24 nav-left" title="Previous Article"></button>
+				<button class="icon icon24 nav-right" title="Next Article"></button>
 			</div>
 			
-			<button id="buttonRefresh" class="icon icon24 refresh" title="Refresh"></button>
+			<button id="button-refresh" class="icon icon24 refresh" title="Refresh"></button>
 			
-			<div class="left list related">
+			<div class="left related">
 				<div class="label">What others say:</div>
-				<div class="clickable listItem"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
-				<div class="clickable listItem"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
-				<div class="clickable listItem"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
-				<div class="clickable listItem"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
-				<div class="clickable listItem"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
-				<div class="clickable listItem"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
-				<div class="clickable listItem"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
-				<div class="clickable listItem"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
-				
+				<div class="list">
+					<div class="clickable small teaser column1"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
+					<div class="clickable small teaser column1"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
+					<div class="clickable small teaser column1"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
+					<div class="clickable small teaser column1"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
+					<div class="clickable small teaser column1"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
+					<div class="clickable small teaser column1"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
+					<div class="clickable small teaser column1"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
+					<div class="clickable small teaser column1"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
+				</div>
 			</div>
 			
-			<div class="content">
+			<div class="center content">
 				<a class="meta" href="http://www.spiegel.de" target="content">01.02.2011 09:53 - spiegel</a>
 				<h1>This is the main content!</h1>
 				<p>Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz Erster Absatz </p>
