--- a/cee-news-html-prototype/src/main/resources/twopage/start.html
+++ b/cee-news-html-prototype/src/main/resources/twopage/start.html
@@ -4,35 +4,35 @@
 		<link type="text/css" rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
-		<div class="startContainer">
+		<div class="start container">
 			<div class="top gradient search">
-				<select class="workingSetSelection" title="Select Working Set">
+				<select class="workingset-selection" title="Select Working Set">
 					<option>German News</option>
 					<option>IT News</option>
 					<option>Job Monitor</option>
 				</select>
-				<button class="icon icon24 editSet" title="Edit Working Set"></button>
-				<button class="icon icon24 addSet" title="Add New Working Set"></button>
-				<button class="icon icon24 deleteSet" title="Delete Working Set"></button>
-				<div class="searchField">
+				<button class="icon icon24 edit-set" title="Edit Working Set"></button>
+				<button class="icon icon24 add-set" title="Add New Working Set"></button>
+				<button class="icon icon24 delete-set" title="Delete Working Set"></button>
+				<div class="search-field">
 					<input type="text" >
 					<button class="icon icon24 search" title="Search"></button>
 				</div>
 			</div>
 			<div class="left sources">
 				<div class="label">Filter Sources:</div>
-				<div class="list verticalScroll">
-					<div class="listItem icon30 checked">Spiegel Online - top news</div>
-					<div class="listItem icon30 checked">Tageschau.de</div>
-					<div class="listItem icon30 unchecked">FAZ</div>
+				<div class="list border vertical-scroll">
+					<div class="list-item icon30 checked">Spiegel Online - top news</div>
+					<div class="list-item icon30 checked">Tageschau.de</div>
+					<div class="list-item icon30 unchecked">FAZ</div>
 				</div>
-				<button class="icon icon24 selectAll" title="Select All"></button>
-				<button class="icon icon24 selectNone" title="Select None"></button>
+				<button class="icon icon24 select-all" title="Select All"></button>
+				<button class="icon icon24 select-none" title="Select None"></button>
 				<button class="icon icon24 add" title="Add Source"></button>
 			</div>
-			<div id="labelResult">Latest Articles:</div>
-			<button id="buttonRefresh" class="icon icon24 refresh" title="Refresh"></button>
-			<div class="center content">
+			<div id="label-result">Latest Articles:</div>
+			<button id="button-refresh" class="icon icon24 refresh" title="Refresh"></button>
+			<div class="center">
 				<div class="clickable teaser column3"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>1 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
 				<div class="clickable teaser column3"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>2 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
 				<div class="clickable teaser column3"><p class="meta">01.02.2011 09:53 - spiegel</p><h1>3 Dieses ist ein sehr spannender Artikel</h1><p>This are the first sentences of the article...</p></div>
