ASSIGNED - # 84: Use UI Binder https://www.andreasbehnke.com/mantis/view.php?id=84

--- a/cee-news-html-prototype/src/main/resources/twopage/start.html
+++ b/cee-news-html-prototype/src/main/resources/twopage/start.html
@@ -6,14 +6,16 @@
 	<body>
 		<div class="start container">
 			<div class="top gradient search">
-				<select class="workingset-selection" title="Select Working Set">
-					<option>German News</option>
-					<option>IT News</option>
-					<option>Job Monitor</option>
-				</select>
-				<button class="icon icon24 edit-set" title="Edit Working Set"></button>
-				<button class="icon icon24 add-set" title="Add New Working Set"></button>
-				<button class="icon icon24 delete-set" title="Delete Working Set"></button>
+				<div>
+					<select class="workingset-selection" title="Select Working Set">
+						<option>German News</option>
+						<option>IT News</option>
+						<option>Job Monitor</option>
+					</select>
+					<button class="icon icon24 edit-set" title="Edit Working Set"></button>
+					<button class="icon icon24 add-set" title="Add New Working Set"></button>
+					<button class="icon icon24 delete-set" title="Delete Working Set"></button>
+				</div>
 				<div class="search-field">
 					<input type="text" >
 					<button class="icon icon24 search" title="Search"></button>
