--- a/cee-news-webreader/src/main/webapp/NewsReader.html
+++ b/cee-news-webreader/src/main/webapp/NewsReader.html
@@ -4,6 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 <link type="text/css" rel="stylesheet" href="NewsReader.css">
+<link type="text/css" rel="stylesheet" href="css/main.css">
 <title>News Reader</title>
 <script src="NewsReader/NewsReader.nocache.js"></script>
 </head>
