--- a/cee-news-webreader/src/main/webapp/NewsReader.html
+++ b/cee-news-webreader/src/main/webapp/NewsReader.html
@@ -3,8 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-<link type="text/css" rel="stylesheet" href="NewsReader.css">
-<link type="text/css" rel="stylesheet" href="css/main.css">
+<!-- link type="text/css" rel="stylesheet" href="NewsReader.css" -->
 <title>News Reader</title>
 <script src="NewsReader/NewsReader.nocache.js"></script>
 </head>
